--- a/JavaScript/guessing-game.css
+++ b/JavaScript/guessing-game.css
@@ -7,6 +7,7 @@ html {
     max-width: 800px;
     min-width: 480px;
     margin: 0 auto;
+    background-color: lightblue;
   }
   
   .form input[type="number"] {
